duplicate document validation finished

--- a/views/ejsFunction.ejs
+++ b/views/ejsFunction.ejs
@@ -137,4 +137,11 @@ showTotalExamFeeBalance = function(inputValue) {
 //============================
 
 
+function mySearchByDate() {
+    
+  document.getElementById("demo").innerHTML = "Hello World";
+  
+}
+
+
 %>
