--- a/views/stdList.ejs
+++ b/views/stdList.ejs
@@ -17,7 +17,7 @@
    
           <div class="table-responsive">
         
-              <table class="table bg-white border mt-1">
+              <table class="table bg-white border mt-3">
                
                 
                 <tbody>
@@ -27,7 +27,7 @@
                     
                     <td><a class="text-dark ms-3 align-middle small float-end border-end pe-2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Add New Student" href="/register"><i class="fas fa-user-plus text-success fw-bold"></i> Add Student</a></td>
                     
-                    <td><a class="text-dark ms-3 align-middle small float-end border-end pe-2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Check fee" href="/viewFee"><i class="fas fa-rupee-sign text-danger fw-bold"></i> View Fee</a></td>
+                    <td><a class="text-dark ms-3 align-middle small float-end border-end pe-2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Check fee" href="/viewFee"><i class="fas fa-rupee-sign text-primary fw-bold"></i> View Fee</a></td>
                     
                     <td><a class="text-dark ms-3 align-middle small float-end border-end pe-2" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Check fee received" href="/viewAllFeeReceived"><i class="fas fa-rupee-sign text-danger fw-bold"></i> View All Fee </a></td>
                     
@@ -46,7 +46,7 @@
     
 <div class="table-responsive">
   
-<table class="table border bg-light  shadow-sm">
+<table class="table border bg-white shadow-sm">
   
   <thead>
     
