--- a/views/viewFeeByDate.ejs
+++ b/views/viewFeeByDate.ejs
@@ -18,7 +18,7 @@
       
         <a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Go to view fee" href="/viewFee"><i class="fas fa-arrow-left text-dark fw-bold"></i> Back </a>
         
-         <p class="text-secondary fw-normal"><%= viewTitle %> : <span class="text-danger"><%= moment().format('DD/MM/YYYY'); %> <%= moment().format("[(]dddd[)]"); %></span></p>
+         <p class="text-secondary fw-normal"><%= viewTitle %> : <span class="text-danger"><%= convertDate(searchDate) %> </span></p>
 
         <a class="text-dark small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Go to Student List" href="/stdList"><i class="far fa-list-alt text-info fw-bold"></i> Student List</a>
 
@@ -68,7 +68,7 @@
           
                     for (var k=0; k < students[i].studentFee.length; k++) {
                         
-                        if( students[i].studentFee[k] != undefined && students[i].studentFee[k].dateofpayment ==  '2021-06-26' ) {
+                        if( students[i].studentFee[k] != undefined && students[i].studentFee[k].dateofpayment ==  searchDate ) {
               
               
               %>
@@ -155,7 +155,7 @@
           
                     for (var k=0; k < students[i].studentExamFee.length; k++) {
                         
-                        if( students[i].studentExamFee[k] != undefined && students[i].studentExamFee[k].dateofpayment ==  '2021-06-26' ) {
+                        if( students[i].studentExamFee[k] != undefined && students[i].studentExamFee[k].dateofpayment ==  searchDate ) {
                             
                             
               
@@ -245,7 +245,7 @@
           
                     for (var k=0; k < students[i].studentOtherFee.length; k++) {
                         
-                        if( students[i].studentOtherFee[k] != undefined && students[i].studentOtherFee[k].dateofpayment == '2021-06-26' ) {
+                        if( students[i].studentOtherFee[k] != undefined && students[i].studentOtherFee[k].dateofpayment == searchDate ) {
                             
               %>
               
