changed validation on edit registration

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,7 +34,9 @@ body {
                 
               </div>
               
-              
+      
+      <!--error a awm chuan form chungah a rawn tilang ang-->
+            
    <% if(errors != null && errors.length > 0 ) { %>
   
 
