student login finished

--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,3 +1,7 @@
+
+<%- include ('../ejsFunction') %> <!--function javascript ejs-->
+
+
 <!------------------------- navigation bar section ------------------->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow sticky-top">
@@ -47,7 +51,7 @@
           
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               
-            <li><a class="dropdown-item" href="/std/login"><i class="fas fa-user text-info"></i> Student Login</a></li>
+            <li><a class="dropdown-item" href="/std/loginStudent"><i class="fas fa-user text-info"></i> Student Login</a></li>
             
             <li><a class="dropdown-item" href="/auth/loginStaff"><i class="fas fa-sign-in-alt text-info"></i> Institute Login</a></li>
             
@@ -56,11 +60,12 @@
         </li>
           
           <% } %>
+          
           <% if(loggedIn) { %>
           
           <a class="nav-link dropdown-toggle text-primary" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               
-            Hi, <b> <%= username.toUpperCase() %> </b>
+            Hi, <b> <%= capitalizeFirstLetter(username) %> </b>
             
           </a>
          
