--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -13,39 +13,75 @@
 
     <!-- --------------main container section------------------ -->
 
-<div class="container-fluid">
+<div class="container">
   
     
 
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+    <main class="ms-sm-auto px-md-4">
+      
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Welcome, <%= username %></h1>
+        
+        <h3 class="text-secondary">Welcome, <%= username %></h3>
+        
+        
+       
+        
+        
         <div class="btn-toolbar mb-2 mb-md-0">
+          
           <div class="btn-group me-2">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+            
+            <a href="computer/<%= studentId %>"><button type="button" class="btn btn-sm btn-outline-secondary"> Profile</button></a>
+            
+            <button type="button" class="btn btn-sm btn-outline-secondary"> Fee</button>
+            
           </div>
-          <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+          
+          <a href="dcatheorywelcomepage" ><button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+            
             <span data-feather="calendar"></span>
-            This week
-          </button>
+            
+            Lesson 
+            
+          </button> </a>
+          
         </div>
+        
+        
+   
+        
+        
+        
       </div>
 
-      <h2>Section title</h2>
+      <h4 class="mt-4 mb-3 text-secondary">Status of Your Assignment</h4>
+      
       <div class="table-responsive">
+        
         <table class="table table-striped table-sm">
+          
           <thead>
+            
             <tr>
+              
               <th>#</th>
+              
               <th>Header</th>
+              
               <th>Header</th>
+              
               <th>Header</th>
+              
               <th>Header</th>
+              
             </tr>
+            
           </thead>
+          
           <tbody>
+            
             <tr>
+              
               <td>1,001</td>
               <td>random</td>
               <td>data</td>
