--- a/views/studentLogin.ejs
+++ b/views/studentLogin.ejs
@@ -23,6 +23,32 @@
     <a href="/"><img class="mb-3" src="/img/icon.png" alt="" width="72" height="57"></a>
     
     <h3 class="h3 mb-3 fw-normal">Please Login</h3>
+    
+    
+    <!--Login laia error awm rawn display tu-->
+  
+  <% if(errors != null && errors.length > 0 ) { %>
+  
+
+  
+      <ul class="list-group"></ul>
+      
+      
+    
+      
+        <li class="list-group-item list-group-item-danger">
+          
+          <%= errors %>
+          
+        </li>
+    
+    </ul>
+    
+    <% } %>
+    
+    
+    
+    
 
     <div class="form-floating mb-2">
       
